# tgram

./: .gitignore  404.html  CNAME.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  auto_gen_methods.py  auto_gen_types.py  genindex.html  index.html  methods.py  mkdocs.yml  modules.html  objects.inv  parser_.py  py-modindex.html  pyproject.toml  script.js  search-data.js  search.html  searchindex.js  styles.css  test.py  tgram.bound.html  tgram.decorators.html  tgram.html  tgram.methods.html  tgram.types.html  tgram_schema.json  tgram_scheme.json  types_.py
.github/: PULL_REQUEST_TEMPLATE.md
_modules/: index.html
_sources/: modules.rst.txt  tgram.decorators.rst.txt  tgram.rst.txt  tgram.types.rst.txt
doc/: generate_scheme.py
docs/: conf.py  generate_docs.py  generate_schema.py  generate_scheme.py  index.md  index.rst  requirements.txt
examples/: business_bot_tgram.py  button_styles.py  callback_listener.py  custom_types.py  echo_bot.py  exceptions_handling.py  feedback_bot.py  keyboard_chat_request.py  listener_bot.py  outgoing_messages.py  tgram_docs_bot.py  whisper_bot.py
filters/: index.html
methods/: add_sticker_to_set.html  answer_callback_query.html  answer_callback_query.py  answer_inline_query.html  answer_pre_checkout_query.html  answer_shipping_query.html  answer_web_app_query.html  approve_chat_join_request.html  approve_chat_join_request.py  ask.html  ask.py  ban_chat_member.html  ban_chat_sender_chat.html  close.html  close.py  close_forum_topic.html  close_general_forum_topic.html  convert_gift_to_stars.html  (+177 more)
(+2788 files in other folders)
