[tool.poetry]
name = "tgram"
version = "1.12.4"
description = "Tgram is a user-friendly and lightweight Python library that simplifies interaction with the Telegram Bot API. It allows developers to easily create, manage, and automate Telegram bots."
authors = ["Zaid <me@zaid.pro>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
aiohttp = "3.10.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
